Bug 31041 - Repeating print area error
Summary: Repeating print area error
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Windows (All)
: high normal
Assignee: Kohei Yoshida
URL: https://bugzilla.novell.com/show_bug....
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-22 01:07 UTC by Ale
Modified: 2012-05-04 01:06 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ale 2010-10-22 01:07:33 UTC
I have the italian GUI, so may be the description of the commands is incorrect, but:

LibO 3.3 beta 2, CALC, WinXP HE SP3.

When I go to define the printing area, all is ok. If I choose a row that I want to be repeated at the top of each sheet, an error rises up:

"sheet reference invalide" or something similar, I translated it from ITA.

The same command works as expected on OO 3.2.1.
Comment 1 Noel Power 2010-10-26 09:04:29 UTC
same result here, looks like a bug, assigning to Kohei
Comment 2 Kohei Yoshida 2010-11-03 08:31:30 UTC
Reproduced.  This is in fact a long standing bug that was not reproducible in my environment for years.

I'll look into it pronto.
Comment 3 Kohei Yoshida 2010-11-03 09:06:43 UTC
Adding novell bugzilla URL where it was originally reported.
Comment 4 Kohei Yoshida 2010-11-03 11:48:05 UTC
In the end, this was a simple case of wrong default value.  I'm glad we can finally put this to rest.

Fixed in libreoffice-3-3, for 3.3, as well as in master.
Comment 5 Kohei Yoshida 2010-11-03 11:49:25 UTC
For QA, this bug occurs with a fresh user configuration, or if you haven't explicitly set the formula syntax in the Calc - Formula options page.
Comment 6 Ale 2010-11-03 12:04:14 UTC
(In reply to comment #4)

> 
> Fixed in libreoffice-3-3, for 3.3, as well as in master.

Thank you to solve this problem so quickly.

Have a nice day.
Comment 7 sophie 2011-01-12 07:44:56 UTC
Verified - Closed - Sophie
Comment 8 Roman Eisele 2012-05-04 01:06:12 UTC
This is a Calc issue, therefore changed 'Component' field accordingly. Therefore, we can remove the '[Calc]' from the Summary.

Set Version according to original description.