Set correct default formula syntax value in case it's not explicitly set.

When starting from a fresh config, Calc failed to assign default 'Calc A1'
syntax unless the user specifically goes to the Options page and sets the
formula syntax in the Calc - Formula options page.  This caused e.g.
print range editing to fail miserably. (fdo#31041)